# (c) 2012 Mandriva, http://www.mandriva.com
#
# This file is part of Mandriva Management Console (MMC).
#
# MMC is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# MMC is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with MMC.  If not, see <http://www.gnu.org/licenses/>.
#
# Author(s)
#   Jean-Philippe Braun <jpbraun@mandriva.com>
#

plugincontribdir = $(datarootdir)/doc/python-mmc-users/contrib/
dist_plugincontrib_DATA = contrib/mmc.schema contrib/mmc.ldif.389DS \
			contrib/mmc.ldif.OpenLDAP contrib/rfc2307bis.schema \
			contrib/rfc2307bis.ldif.OpenLDAP
